Fix kerning for doubleWrapped chars

--- a/components/ui/Romper/Romper.module.scss
+++ b/components/ui/Romper/Romper.module.scss
@@ -24,6 +24,13 @@
     [data-type='kern'],
     [data-type='nokern'] {
         position: absolute;
+
+        > div {
+            all: unset;
+            display: block;
+            white-space: pre;
+            width: fit-content;
+        }
     }
 
     [data-type='kern'] {
